[package]
name = "pe-unwind-info"
version = "0.1.0"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
edition = "2021"
keywords = ["unwind", "pe", "microsoft", "x86_64", "x64"]
categories = ["parser-implementations"]
description = "Parsers for PE unwind info"
homepage = "https://github.com/afranchuk/pe-unwind-info"
readme = "README.md"
license = "MIT"
exclude = ["/fixture"]

[dependencies]
bitflags = "2"
thiserror = "1"
zerocopy = "0.6"
arrayvec = "0.7"

[dev-dependencies]
hex-literal = "0.4"
memmap2 = "0.7"
object = "0.31"
